# Estrutura-de-dados

./: CMakeLists.txt  arvorealinhada.c  grafo.cpp
C/: CMakeLists.txt
C/atividade/: comparandostrings.c
C/lista-encadeada/: listaencadeadainicio.c  quest95.c
C/pilhas/: function.h  main.c
C/registros/: aluno.c  medotosarray.c
atividade-tree/: method.h  tree.h
c++/: CMakeLists.txt
c++/iniciante/: conversiondays  conversiondays.cpp  conversionhm  conversionhm.cpp  invert  invert.cpp
c++/pilhas/: exemplopilhas.c++
c++/trabalho/: polinomos.c++
decision-tree/: main.c
tree/: main.c  method.h  tree.h
