cmake_minimum_required(VERSION 3.29)
project(Estrutura_de_dados)

set(CMAKE_CXX_STANDARD 14)

add_executable(Estrutura_de_dados
    C/atividade/comparandostrings.c
    C/registros/aluno.c
    C/registros/medotosarray.c
    c++/iniciante/conversiondays.cpp
    c++/iniciante/conversionhm.cpp
    c++/iniciante/invert.cpp)
